CMakeLists.txt:   * PRIVATE -> PUBLIC to get the compile flag and option be actually added ssbm.hpp:   * separate length parameter for PCM   * formatting (unfortunately, eclipse formatter does a bad job here...)

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -91,8 +91,8 @@ ENDMACRO(append_target_property)
 MACRO(enable_openmp arg_queries)
     STRING(REPLACE " " ";" QUERIES "${arg_queries}")
     FOREACH(Q ${QUERIES})
-        APPEND_TARGET_PROPERTY(${Q} "COMPILE_FLAGS" "${OpenMP_CXX_FLAGS}")
-        APPEND_TARGET_PROPERTY(${Q} "LINK_FLAGS" "${OpenMP_CXX_FLAGS}")
+        append_target_property(${Q} "COMPILE_FLAGS" "${OpenMP_CXX_FLAGS}")
+        append_target_property(${Q} "LINK_FLAGS" "${OpenMP_CXX_FLAGS}")
     ENDFOREACH(Q QUERIES)
 ENDMACRO(enable_openmp)
 
@@ -100,6 +100,7 @@ MACRO(add_ssbm arg_queries)
     STRING(REPLACE " " ";" QUERIES "${arg_queries}")
     FOREACH(Q ${QUERIES})
         add_algorithm(${Q} "ssbm" ${Q})
+        TARGET_COMPILE_OPTIONS(${Q} PUBLIC "-fno-tree-vectorize")
     ENDFOREACH(Q QUERIES)
 ENDMACRO(add_ssbm)
 
@@ -107,7 +108,7 @@ MACRO(add_ssbm_SSE arg_queries)
     STRING(REPLACE " " ";" QUERIES "${arg_queries}")
     FOREACH(Q ${QUERIES})
         add_algorithm(${Q} "ssbm" "${Q}_SSE")
-        TARGET_COMPILE_DEFINITIONS("${Q}_SSE" PRIVATE "FORCE_SSE")
+        TARGET_COMPILE_DEFINITIONS("${Q}_SSE" PUBLIC "FORCE_SSE")
     ENDFOREACH(Q QUERIES)
 ENDMACRO(add_ssbm_SSE)
 
