only keep new pack_right for 8-bit data (It's neither slower nor really faster, but takes much less space)

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ CMakeFiles
 /eval/dataNewHashjoin1/
 /eval/dataNewHashjoin2/
 /eval/2017*
+/lib/column_operators/createshufflemaskarrays
+/lib/column_operators/testshufflemask
