--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -54,5 +54,19 @@ ENDMACRO( add_shared_lib )
 
 MESSAGE("Generating make scripts for ${PROJECT_NAME} in ${CMAKE_BUILD_TYPE} mode")
 
-#add_static_lib(RStoreCore "util/resilience.cpp util/rss.cpp util/stopwatch.cpp util/v2types.cpp util/argumentparser.cpp column_storage/BucketManager.cpp column_storage/ColumnManager.cpp column_storage/Transaction.cpp column_storage/TransactionManager.cpp column_operators/Operators.cpp column_operators/SSE.cpp meta_repository/MetaRepositoryManager.cpp" "")
-add_shared_lib(RStoreCore "util/resilience.cpp util/rss.cpp util/stopwatch.cpp util/v2types.cpp util/argumentparser.cpp column_storage/BucketManager.cpp column_storage/ColumnManager.cpp column_storage/Transaction.cpp column_storage/TransactionManager.cpp column_operators/Operators.cpp column_operators/SSE.cpp meta_repository/MetaRepositoryManager.cpp" "")
+#add_static_lib(RStoreCore "util/resilience.cpp \
+add_shared_lib(RStoreCore "util/resilience.cpp \
+util/rss.cpp \
+util/stopwatch.cpp \
+util/v2types.cpp \
+util/argumentparser.cpp \
+column_storage/ColumnManager.cpp \
+column_storage/BucketManager.cpp \
+column_storage/ColumnManager.cpp \
+column_storage/Storage.cpp \
+column_storage/Transaction.cpp \
+column_storage/TransactionManager.cpp \
+column_operators/Operators.cpp \
+column_operators/OperatorsAN.cpp \
+column_operators/SSE.cpp \
+meta_repository/MetaRepositoryManager.cpp" "")
