distribute explicit template instantiation of operators to multiple files for faster compilation -- WORK IN PROGRESS -- not all files copile currently, as some explicit instantiations are missing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,12 +19,12 @@ SET(CMAKE_CXX_COMPILER_INIT g++-6)
 
 IF(POLICY CMP0048)
     CMAKE_POLICY(SET CMP0048 NEW)
-    PROJECT(RSTORE VERSION 0.6 LANGUAGES CXX)
+    PROJECT(AHEAD VERSION 0.7 LANGUAGES CXX)
 ELSE()
-    PROJECT(RSTORE LANGUAGES CXX)
+    PROJECT(AHEAD LANGUAGES CXX)
 ENDIF()
 
-MESSAGE("RSTORE root CMAKE script. Including lib and build:")
+MESSAGE("AHEAD root CMAKE script. Including lib (Core) and tools (Queries):")
 
 #set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
 SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
