--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -12,16 +12,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.5 FATAL_ERROR)
 
 SET(CMAKE_C_COMPILER_INIT gcc-6)
 SET(CMAKE_CXX_COMPILER_INIT g++-6)
 
 IF(POLICY CMP0048)
     CMAKE_POLICY(SET CMP0048 NEW)
-    PROJECT(RSTORELIB VERSION 0.6 LANGUAGES CXX)
+    PROJECT(LIBAHEAD VERSION 0.7 LANGUAGES CXX)
 ELSE()
-    PROJECT(RSTORELIB LANGUAGES CXX)
+    PROJECT(LIBAHEAD LANGUAGES CXX)
 ENDIF()
 
 MACRO( add_static_lib arg_name arg_source_files arg_dep_libs )
@@ -36,7 +36,7 @@ MACRO( add_static_lib arg_name arg_source_files arg_dep_libs )
     ADD_LIBRARY(${LIBNAME} STATIC ${SOURCE_FILES})
     SET_PROPERTY(TARGET ${LIBNAME} PROPERTY CXX_STANDARD 14)
     SET_PROPERTY(TARGET ${LIBNAME} PROPERTY CXX_STANDARD_REQUIRED ON)
-    TARGET_LINK_LIBRARIES(${LIBNAME} ffi dl pthread curses boost_system boost_filesystem)
+    TARGET_LINK_LIBRARIES(${LIBNAME} ffi dl pthread curses boost_system boost_filesystem "${arg_dep_libs}")
 ENDMACRO( add_static_lib )
 
 MACRO( add_shared_lib arg_name arg_source_files arg_dep_libs )
@@ -48,14 +48,14 @@ MACRO( add_shared_lib arg_name arg_source_files arg_dep_libs )
     ADD_LIBRARY(${LIBNAME} SHARED ${SOURCE_FILES})
     SET_PROPERTY(TARGET ${LIBNAME} PROPERTY CXX_STANDARD 14)
     SET_PROPERTY(TARGET ${LIBNAME} PROPERTY CXX_STANDARD_REQUIRED ON)
-    TARGET_LINK_LIBRARIES(${LIBNAME} ffi dl pthread curses boost_system boost_filesystem)
+    TARGET_LINK_LIBRARIES(${LIBNAME} ffi dl pthread curses boost_system boost_filesystem "${arg_dep_libs}")
 ENDMACRO( add_shared_lib )
 
 
 MESSAGE("Generating make scripts for ${PROJECT_NAME} in ${CMAKE_BUILD_TYPE} mode")
 
-#add_static_lib(RStoreCore "util/resilience.cpp \
-add_shared_lib(RStoreCore "AHEAD.cpp \
+#add_static_lib(AHEAD "util/resilience.cpp \
+add_shared_lib(AHEAD "AHEAD.cpp \
 util/resilience.cpp \
 util/rss.cpp \
 util/stopwatch.cpp \
@@ -67,7 +67,16 @@ column_storage/ColumnManager.cpp \
 column_storage/Storage.cpp \
 column_storage/Transaction.cpp \
 column_storage/TransactionManager.cpp \
-column_operators/Operators.cpp \
-column_operators/OperatorsAN.cpp \
+column_operators/Normal/aggregate.cpp \
+column_operators/Normal/groupby.cpp \
+column_operators/Normal/hashjoin.cpp \
+column_operators/Normal/matchjoin.cpp \
+column_operators/Normal/miscellaneous.cpp \
+column_operators/Normal/select.cpp \
+column_operators/AN/aggregateAN.cpp \
+column_operators/AN/groupbyAN.cpp \
+column_operators/AN/hashjoinAN.cpp \
+column_operators/AN/matchjoinAN.cpp \
+column_operators/AN/selectAN.cpp \
 column_operators/SSE.cpp \
 meta_repository/MetaRepositoryManager.cpp" "")
