further reduce executables sizes   * move more code into SSB dynamic linked library   * add more extern template definitions (AN matchjoin and aggregates) add eclipse cdt formatter style allow scalar and sse code to be compiled next to each other (simply use the corret sub-namespace ahead::bat:ops::{scalar|sse}) add typedefs for (v2_)restinyint_t and (v2_)resshortint_t (to allow some simpler extern template definitions in macros)

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>v2</name>
+	<name>AHEAD</name>
 	<comment></comment>
 	<projects>
 	</projects>
