--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -14,9 +14,6 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.5 FATAL_ERROR)
 
-SET(CMAKE_C_COMPILER_INIT gcc-6)
-SET(CMAKE_CXX_COMPILER_INIT g++-6)
-
 IF(POLICY CMP0048)
     CMAKE_POLICY(SET CMP0048 NEW)
     PROJECT(SSBQueries VERSION 1.0 LANGUAGES CXX)
@@ -50,25 +47,23 @@ ENDIF(NOT EXISTS "${LIBPCMDIR}/libpcm.so")
 
 FIND_LIBRARY(LIBPCM pcm "${LIBPCMDIR}")
 IF(LIBPCM)
-	MESSAGE(STATUS "PCM library can be found")
+	MESSAGE(STATUS "PCM library can be found (${LIBPCM})")
 ENDIF(LIBPCM)
 
 ##########################
 ### SSB Shared Library ###
 ##########################
-MACRO( add_shared_lib target_name arg_source_files arg_dep_libs )
+MACRO( add_shared_lib target_name arg_source_files )
     SET(LIBNAME "${target_name}")
-
     STRING(REPLACE " " ";" SOURCE_FILES "${arg_source_files}")
-
     MESSAGE(STATUS "Add shared library ${LIBNAME}")
     ADD_LIBRARY(${LIBNAME} SHARED ${SOURCE_FILES})
     SET_PROPERTY(TARGET ${LIBNAME} PROPERTY CXX_STANDARD 14)
     SET_PROPERTY(TARGET ${LIBNAME} PROPERTY CXX_STANDARD_REQUIRED ON)
     TARGET_INCLUDE_DIRECTORIES(${target_name} PUBLIC "${PCMDIR}")
-    TARGET_LINK_LIBRARIES(${LIBNAME} ffi dl pthread curses boost_system boost_filesystem "${arg_dep_libs}")
+    TARGET_LINK_LIBRARIES(${LIBNAME} AHEAD "${LIBPCM}" ffi dl pthread curses boost_system boost_filesystem)
 ENDMACRO( add_shared_lib )
-add_shared_lib(SSB "ssbm/ssb.cpp" "AHEAD")
+add_shared_lib(SSB "ssbm/ssb.cpp")
 
 ######################
 ### SAMPLES & SSBM ###
@@ -106,6 +101,7 @@ MACRO(append_target_property arg_target arg_property arg_setting)
 ENDMACRO(append_target_property)
 
 MACRO(add_ssb arg_queries)
+	SET(QUERIES "")
     STRING(REPLACE " " ";" QUERIES "${arg_queries}")
     FOREACH(Q ${QUERIES})
         add_algorithm(${Q} "ssbm" "${Q}_seq")
@@ -114,6 +110,7 @@ MACRO(add_ssb arg_queries)
 ENDMACRO(add_ssb)
 
 MACRO(add_ssb_SSE arg_queries)
+	SET(QUERIES "")
     STRING(REPLACE " " ";" QUERIES "${arg_queries}")
     FOREACH(Q ${QUERIES})
         add_algorithm(${Q} "ssbm" "${Q}_SSE")
@@ -121,13 +118,20 @@ MACRO(add_ssb_SSE arg_queries)
     ENDFOREACH(Q QUERIES)
 ENDMACRO(add_ssb_SSE)
 
-add_ssb("ssbm-q11_normal ssbm-q11_dmr_seq ssbm-q11_dmr_mt ssbm-q11_early ssbm-q11_late ssbm-q11_continuous ssbm-q11_continuous_reenc ssbm-q12_normal ssbm-q12_dmr_seq ssbm-q12_dmr_mt ssbm-q12_early ssbm-q12_late ssbm-q12_continuous ssbm-q12_continuous_reenc ssbm-q13_normal ssbm-q13_dmr_seq ssbm-q13_dmr_mt ssbm-q13_early ssbm-q13_late ssbm-q13_continuous ssbm-q13_continuous_reenc ssbm-q21_normal ssbm-q21_dmr_seq ssbm-q21_dmr_mt ssbm-q21_early ssbm-q21_late ssbm-q21_continuous ssbm-q21_continuous_reenc")
-add_ssb_SSE("ssbm-q11_normal ssbm-q11_dmr_seq ssbm-q11_dmr_mt ssbm-q11_early ssbm-q11_late ssbm-q11_continuous ssbm-q11_continuous_reenc ssbm-q12_normal ssbm-q12_dmr_seq ssbm-q12_dmr_mt ssbm-q12_early ssbm-q12_late ssbm-q12_continuous ssbm-q12_continuous_reenc ssbm-q13_normal ssbm-q13_dmr_seq ssbm-q13_dmr_mt ssbm-q13_early ssbm-q13_late ssbm-q13_continuous ssbm-q13_continuous_reenc ssbm-q21_normal ssbm-q21_dmr_seq ssbm-q21_dmr_mt ssbm-q21_early ssbm-q21_late ssbm-q21_continuous ssbm-q21_continuous_reenc")
+add_ssb("ssbm-q11_normal ssbm-q11_dmr_seq ssbm-q11_early ssbm-q11_late ssbm-q11_continuous ssbm-q11_continuous_reenc \
+ssbm-q12_normal ssbm-q12_dmr_seq ssbm-q12_early ssbm-q12_late ssbm-q12_continuous ssbm-q12_continuous_reenc \
+ssbm-q13_normal ssbm-q13_dmr_seq ssbm-q13_early ssbm-q13_late ssbm-q13_continuous ssbm-q13_continuous_reenc \
+ssbm-q21_normal ssbm-q21_dmr_seq ssbm-q21_early ssbm-q21_late ssbm-q21_continuous ssbm-q21_continuous_reenc")
+add_ssb_SSE("ssbm-q11_normal ssbm-q11_dmr_seq ssbm-q11_early ssbm-q11_late ssbm-q11_continuous ssbm-q11_continuous_reenc \
+ssbm-q12_normal ssbm-q12_dmr_seq ssbm-q12_early ssbm-q12_late ssbm-q12_continuous ssbm-q12_continuous_reenc \
+ssbm-q13_normal ssbm-q13_dmr_seq ssbm-q13_early ssbm-q13_late ssbm-q13_continuous ssbm-q13_continuous_reenc \
+ssbm-q21_normal ssbm-q21_dmr_seq ssbm-q21_early ssbm-q21_late ssbm-q21_continuous ssbm-q21_continuous_reenc")
 
 ##############
 ### OPENMP ###
 ##############
 MACRO(enable_openmp arg_queries)
+	SET(QUERIES "")
     STRING(REPLACE " " ";" QUERIES "${arg_queries}")
     FOREACH(Q ${QUERIES})
         append_target_property(${Q} "COMPILE_FLAGS" "${OpenMP_CXX_FLAGS}")
@@ -138,9 +142,11 @@ ENDMACRO(enable_openmp)
 FIND_PACKAGE(OpenMP)
 
 IF(OPENMP_FOUND)
-	MESSAGE(STATUS "Enabling OpenMP")
-	enable_openmp("ssbm-q11_dmr_mt_seq ssbm-q12_dmr_mt_seq ssbm-q13_dmr_mt_seq ssbm-q21_dmr_mt_seq")
-	enable_openmp("ssbm-q11_dmr_mt_SSE ssbm-q12_dmr_mt_SSE ssbm-q13_dmr_mt_SSE ssbm-q21_dmr_mt_SSE")
+	MESSAGE("Generating OpenMP targets")
+	add_ssb("ssbm-q11_dmr_mt ssbm-q12_dmr_mt ssbm-q13_dmr_mt ssbm-q21_dmr_mt")
+	add_ssb_SSE("ssbm-q11_dmr_mt ssbm-q12_dmr_mt ssbm-q13_dmr_mt ssbm-q21_dmr_mt")
+	enable_openmp("ssbm-q11_dmr_mt_seq ssbm-q12_dmr_mt_seq ssbm-q13_dmr_mt_seq ssbm-q21_dmr_mt_seq \
+ssbm-q11_dmr_mt_SSE ssbm-q12_dmr_mt_SSE ssbm-q13_dmr_mt_SSE ssbm-q21_dmr_mt_SSE")
 ELSE(OPENMP_FOUND)
 	MESSAGE(WARNING "OpenMP not found!")
 ENDIF(OPENMP_FOUND)
