add tests for the pack_right functionality   * implement variant from paper "Implementing database operations using SIMD instructions" - Zhou, Jingren and Ross, Kenneth A. -  SIGMOD 2002   * the shuffle mask table-based approach beats the selection-copy based variant (except 8-bit case)   * BUT the selection-based variant delivers the "expected" behavior

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.a
 *.o
 *.out
+*.out2
 *.err
 *_dbg
 *.result
@@ -24,5 +25,6 @@ CMakeFiles
 /eval/2017*
 /lib/column_operators/createshufflemaskarrays
 /lib/column_operators/testshufflemask
+/lib/column_operators/testshufflemasktable
 /Debug
 /Release
