Move all actual operator code into lib. By that, client code never has to parse operator code. This will greatly speed up compiling client code and reduce client code size, because we cannot accidentially miss an explicit template instantiation. Add test folder where there are moved some tests and createshufflemaskarrays.cpp

--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,9 @@ CMakeFiles
 /eval/dataNewHashjoin1/
 /eval/dataNewHashjoin2/
 /eval/2017*
-/lib/column_operators/createshufflemaskarrays
-/lib/column_operators/functors
-/lib/column_operators/testshufflemask
-/lib/column_operators/testshufflemasktable
+/test/createshufflemaskarrays
+/test/functors
+/test/testshufflemask
+/test/testshufflemasktable
 /Debug
 /Release
