use cotire to produce precompiled headers automagically (might speedup builds a bit)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ MESSAGE("AHEAD root CMAKE script. Including lib (Core) and tools (Queries):")
 SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 SET(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
+SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake")
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -Wall -Wextra -pedantic -Weffc++ -fexceptions -fnon-call-exceptions")
 #SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -DDEBUG -rdynamic -g")
@@ -37,7 +38,10 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -Wall -Wextra -pedantic -W
 #SET(CMAKE_CXX_FLAGS_PROFILEGENERATE "${CMAKE_CXX_FLAGS_PROFILEGENERATE} -O0 -DDEBUG -rdynamic -g -pg -fprofile-generate")
 #SET(CMAKE_CXX_FLAGS_PROFILEUSE "${CMAKE_CXX_FLAGS_PROFILEUSE} -O3 -DNDEBUG -fprofile-use")
 
+INCLUDE(cotire)
+
 INCLUDE_DIRECTORIES("${PROJECT_INCLUDE_DIR}")
 
 ADD_SUBDIRECTORY(lib)
 ADD_SUBDIRECTORY(tools)
+
