BATIterators   * add function to determine the current position (intended for runtime exceptions when comparing the contents in modular redundant query variants) ModularRedundant:   * abstract the size and content comparison for the result tuples --> only a single line of code in the queries! see all *dmr* variants Further adaptation to all queries   * in ssb::init() automatically print the line below the headline text (removed from all queries)

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -124,22 +124,26 @@ ssbm-q13_normal ssbm-q13_dmr_seq ssbm-q13_early ssbm-q13_late ssbm-q13_continuou
 ssbm-q21_normal ssbm-q21_dmr_seq ssbm-q21_early ssbm-q21_late ssbm-q21_continuous ssbm-q21_continuous_reenc \
 ssbm-q22_normal ssbm-q22_dmr_seq ssbm-q22_early ssbm-q22_late ssbm-q22_continuous ssbm-q22_continuous_reenc \
 ssbm-q23_normal ssbm-q23_dmr_seq ssbm-q23_early ssbm-q23_late ssbm-q23_continuous ssbm-q23_continuous_reenc \
-ssbm-q31_normal \
-ssbm-q32_normal \
+ssbm-q31_normal ssbm-q31_dmr_seq \
+ssbm-q32_normal ssbm-q32_dmr_seq \
 ssbm-q33_normal \
 ssbm-q34_normal \
-ssbm-q41_normal")
+ssbm-q41_normal \
+ssbm-q42_normal \
+ssbm-q43_normal")
 add_ssb_SSE("ssbm-q11_normal ssbm-q11_dmr_seq ssbm-q11_early ssbm-q11_late ssbm-q11_continuous ssbm-q11_continuous_reenc \
 ssbm-q12_normal ssbm-q12_dmr_seq ssbm-q12_early ssbm-q12_late ssbm-q12_continuous ssbm-q12_continuous_reenc \
 ssbm-q13_normal ssbm-q13_dmr_seq ssbm-q13_early ssbm-q13_late ssbm-q13_continuous ssbm-q13_continuous_reenc \
 ssbm-q21_normal ssbm-q21_dmr_seq ssbm-q21_early ssbm-q21_late ssbm-q21_continuous ssbm-q21_continuous_reenc \
 ssbm-q22_normal ssbm-q22_dmr_seq ssbm-q22_early ssbm-q22_late ssbm-q22_continuous ssbm-q22_continuous_reenc \
 ssbm-q23_normal ssbm-q23_dmr_seq ssbm-q23_early ssbm-q23_late ssbm-q23_continuous ssbm-q23_continuous_reenc \
-ssbm-q31_normal \
-ssbm-q32_normal \
+ssbm-q31_normal ssbm-q31_dmr_seq \
+ssbm-q32_normal ssbm-q32_dmr_seq \
 ssbm-q33_normal \
 ssbm-q34_normal \
-ssbm-q41_normal")
+ssbm-q41_normal \
+ssbm-q42_normal \
+ssbm-q43_normal")
 
 ##############
 ### OPENMP ###
@@ -157,10 +161,10 @@ FIND_PACKAGE(OpenMP)
 
 IF(OPENMP_FOUND)
 	MESSAGE("Generating OpenMP targets")
-	add_ssb("ssbm-q11_dmr_mt ssbm-q12_dmr_mt ssbm-q13_dmr_mt ssbm-q21_dmr_mt ssbm-q22_dmr_mt ssbm-q23_dmr_mt")
-	add_ssb_SSE("ssbm-q11_dmr_mt ssbm-q12_dmr_mt ssbm-q13_dmr_mt ssbm-q21_dmr_mt ssbm-q22_dmr_mt ssbm-q23_dmr_mt")
-	enable_openmp("ssbm-q11_dmr_mt_seq ssbm-q12_dmr_mt_seq ssbm-q13_dmr_mt_seq ssbm-q21_dmr_mt_seq ssbm-q22_dmr_mt_seq ssbm-q23_dmr_mt_seq \
-ssbm-q11_dmr_mt_SSE ssbm-q12_dmr_mt_SSE ssbm-q13_dmr_mt_SSE ssbm-q21_dmr_mt_SSE ssbm-q22_dmr_mt_SSE ssbm-q23_dmr_mt_SSE")
+	add_ssb("ssbm-q11_dmr_mt ssbm-q12_dmr_mt ssbm-q13_dmr_mt ssbm-q21_dmr_mt ssbm-q22_dmr_mt ssbm-q23_dmr_mt ssbm-q31_dmr_mt ssbm-q32_dmr_mt")
+	add_ssb_SSE("ssbm-q11_dmr_mt ssbm-q12_dmr_mt ssbm-q13_dmr_mt ssbm-q21_dmr_mt ssbm-q22_dmr_mt ssbm-q23_dmr_mt ssbm-q31_dmr_mt ssbm-q32_dmr_mt")
+	enable_openmp("ssbm-q11_dmr_mt_seq ssbm-q12_dmr_mt_seq ssbm-q13_dmr_mt_seq ssbm-q21_dmr_mt_seq ssbm-q22_dmr_mt_seq ssbm-q23_dmr_mt_seq ssbm-q31_dmr_mt_seq ssbm-q32_dmr_mt_seq \
+ssbm-q11_dmr_mt_SSE ssbm-q12_dmr_mt_SSE ssbm-q13_dmr_mt_SSE ssbm-q21_dmr_mt_SSE ssbm-q22_dmr_mt_SSE ssbm-q23_dmr_mt_SSE ssbm-q31_dmr_mt_SSE ssbm-q32_dmr_mt_SSE")
 ELSE(OPENMP_FOUND)
 	MESSAGE(WARNING "OpenMP not found!")
 ENDIF(OPENMP_FOUND)
