--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -126,11 +126,11 @@ ssbm-q22_normal ssbm-q22_dmr_seq ssbm-q22_early ssbm-q22_late ssbm-q22_continuou
 ssbm-q23_normal ssbm-q23_dmr_seq ssbm-q23_early ssbm-q23_late ssbm-q23_continuous ssbm-q23_continuous_reenc \
 ssbm-q31_normal ssbm-q31_dmr_seq \
 ssbm-q32_normal ssbm-q32_dmr_seq \
-ssbm-q33_normal \
-ssbm-q34_normal \
-ssbm-q41_normal \
-ssbm-q42_normal \
-ssbm-q43_normal")
+ssbm-q33_normal ssbm-q33_dmr_seq \
+ssbm-q34_normal ssbm-q34_dmr_seq \
+ssbm-q41_normal ssbm-q41_dmr_seq \
+ssbm-q42_normal ssbm-q42_dmr_seq \
+ssbm-q43_normal ssbm-q43_dmr_seq")
 add_ssb_SSE("ssbm-q11_normal ssbm-q11_dmr_seq ssbm-q11_early ssbm-q11_late ssbm-q11_continuous ssbm-q11_continuous_reenc \
 ssbm-q12_normal ssbm-q12_dmr_seq ssbm-q12_early ssbm-q12_late ssbm-q12_continuous ssbm-q12_continuous_reenc \
 ssbm-q13_normal ssbm-q13_dmr_seq ssbm-q13_early ssbm-q13_late ssbm-q13_continuous ssbm-q13_continuous_reenc \
@@ -139,11 +139,11 @@ ssbm-q22_normal ssbm-q22_dmr_seq ssbm-q22_early ssbm-q22_late ssbm-q22_continuou
 ssbm-q23_normal ssbm-q23_dmr_seq ssbm-q23_early ssbm-q23_late ssbm-q23_continuous ssbm-q23_continuous_reenc \
 ssbm-q31_normal ssbm-q31_dmr_seq \
 ssbm-q32_normal ssbm-q32_dmr_seq \
-ssbm-q33_normal \
-ssbm-q34_normal \
-ssbm-q41_normal \
-ssbm-q42_normal \
-ssbm-q43_normal")
+ssbm-q33_normal ssbm-q33_dmr_seq \
+ssbm-q34_normal ssbm-q34_dmr_seq \
+ssbm-q41_normal ssbm-q41_dmr_seq \
+ssbm-q42_normal ssbm-q42_dmr_seq \
+ssbm-q43_normal ssbm-q43_dmr_seq")
 
 ##############
 ### OPENMP ###
@@ -161,10 +161,18 @@ FIND_PACKAGE(OpenMP)
 
 IF(OPENMP_FOUND)
 	MESSAGE("Generating OpenMP targets")
-	add_ssb("ssbm-q11_dmr_mt ssbm-q12_dmr_mt ssbm-q13_dmr_mt ssbm-q21_dmr_mt ssbm-q22_dmr_mt ssbm-q23_dmr_mt ssbm-q31_dmr_mt ssbm-q32_dmr_mt")
-	add_ssb_SSE("ssbm-q11_dmr_mt ssbm-q12_dmr_mt ssbm-q13_dmr_mt ssbm-q21_dmr_mt ssbm-q22_dmr_mt ssbm-q23_dmr_mt ssbm-q31_dmr_mt ssbm-q32_dmr_mt")
-	enable_openmp("ssbm-q11_dmr_mt_seq ssbm-q12_dmr_mt_seq ssbm-q13_dmr_mt_seq ssbm-q21_dmr_mt_seq ssbm-q22_dmr_mt_seq ssbm-q23_dmr_mt_seq ssbm-q31_dmr_mt_seq ssbm-q32_dmr_mt_seq \
-ssbm-q11_dmr_mt_SSE ssbm-q12_dmr_mt_SSE ssbm-q13_dmr_mt_SSE ssbm-q21_dmr_mt_SSE ssbm-q22_dmr_mt_SSE ssbm-q23_dmr_mt_SSE ssbm-q31_dmr_mt_SSE ssbm-q32_dmr_mt_SSE")
+	add_ssb("ssbm-q11_dmr_mt ssbm-q12_dmr_mt ssbm-q13_dmr_mt \
+ssbm-q21_dmr_mt ssbm-q22_dmr_mt ssbm-q23_dmr_mt \
+ssbm-q31_dmr_mt ssbm-q32_dmr_mt ssbm-q33_dmr_mt ssbm-q34_dmr_mt \
+ssbm-q41_dmr_mt ssbm-q42_dmr_mt ssbm-q43_dmr_mt")
+	add_ssb_SSE("ssbm-q11_dmr_mt ssbm-q12_dmr_mt ssbm-q13_dmr_mt \
+ssbm-q21_dmr_mt ssbm-q22_dmr_mt ssbm-q23_dmr_mt \
+ssbm-q31_dmr_mt ssbm-q32_dmr_mt ssbm-q33_dmr_mt ssbm-q34_dmr_mt \
+ssbm-q41_dmr_mt ssbm-q42_dmr_mt ssbm-q43_dmr_mt")
+	enable_openmp("ssbm-q11_dmr_mt_seq ssbm-q12_dmr_mt_seq ssbm-q13_dmr_mt_seq ssbm-q11_dmr_mt_SSE ssbm-q12_dmr_mt_SSE ssbm-q13_dmr_mt_SSE \
+ssbm-q21_dmr_mt_seq ssbm-q22_dmr_mt_seq ssbm-q23_dmr_mt_seq ssbm-q21_dmr_mt_SSE ssbm-q22_dmr_mt_SSE ssbm-q23_dmr_mt_SSE \
+ssbm-q31_dmr_mt_seq ssbm-q32_dmr_mt_seq ssbm-q33_dmr_mt_seq ssbm-q34_dmr_mt_seq ssbm-q31_dmr_mt_SSE ssbm-q32_dmr_mt_SSE ssbm-q33_dmr_mt_SSE ssbm-q34_dmr_mt_SSE \
+ssbm-q41_dmr_mt_seq ssbm-q42_dmr_mt_seq ssbm-q43_dmr_mt_seq ssbm-q41_dmr_mt_SSE ssbm-q42_dmr_mt_SSE ssbm-q43_dmr_mt_SSE")
 ELSE(OPENMP_FOUND)
 	MESSAGE(WARNING "OpenMP not found!")
 ENDIF(OPENMP_FOUND)
