Add early and late decoding variants for the remaining SSB queries (3.1 ... 4.3). Normalize comments in all queries' sources. Adapt existing ssb 2.*-late variants to check-and-decode even later (just before the grouping). This scheme is also used in the 3.1 ... 4.3-late variants. All queries compile on the dev-machine.

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -124,26 +124,26 @@ ssbm-q13_normal ssbm-q13_dmr_seq ssbm-q13_early ssbm-q13_late ssbm-q13_continuou
 ssbm-q21_normal ssbm-q21_dmr_seq ssbm-q21_early ssbm-q21_late ssbm-q21_continuous ssbm-q21_continuous_reenc \
 ssbm-q22_normal ssbm-q22_dmr_seq ssbm-q22_early ssbm-q22_late ssbm-q22_continuous ssbm-q22_continuous_reenc \
 ssbm-q23_normal ssbm-q23_dmr_seq ssbm-q23_early ssbm-q23_late ssbm-q23_continuous ssbm-q23_continuous_reenc \
-ssbm-q31_normal ssbm-q31_dmr_seq \
-ssbm-q32_normal ssbm-q32_dmr_seq \
-ssbm-q33_normal ssbm-q33_dmr_seq \
-ssbm-q34_normal ssbm-q34_dmr_seq \
-ssbm-q41_normal ssbm-q41_dmr_seq \
-ssbm-q42_normal ssbm-q42_dmr_seq \
-ssbm-q43_normal ssbm-q43_dmr_seq")
+ssbm-q31_normal ssbm-q31_dmr_seq ssbm-q31_early ssbm-q31_late \
+ssbm-q32_normal ssbm-q32_dmr_seq ssbm-q32_early ssbm-q32_late \
+ssbm-q33_normal ssbm-q33_dmr_seq ssbm-q33_early ssbm-q33_late \
+ssbm-q34_normal ssbm-q34_dmr_seq ssbm-q34_early ssbm-q34_late \
+ssbm-q41_normal ssbm-q41_dmr_seq ssbm-q41_early ssbm-q41_late \
+ssbm-q42_normal ssbm-q42_dmr_seq ssbm-q42_early ssbm-q42_late \
+ssbm-q43_normal ssbm-q43_dmr_seq ssbm-q43_early ssbm-q43_late")
 add_ssb_SSE("ssbm-q11_normal ssbm-q11_dmr_seq ssbm-q11_early ssbm-q11_late ssbm-q11_continuous ssbm-q11_continuous_reenc \
 ssbm-q12_normal ssbm-q12_dmr_seq ssbm-q12_early ssbm-q12_late ssbm-q12_continuous ssbm-q12_continuous_reenc \
 ssbm-q13_normal ssbm-q13_dmr_seq ssbm-q13_early ssbm-q13_late ssbm-q13_continuous ssbm-q13_continuous_reenc \
 ssbm-q21_normal ssbm-q21_dmr_seq ssbm-q21_early ssbm-q21_late ssbm-q21_continuous ssbm-q21_continuous_reenc \
 ssbm-q22_normal ssbm-q22_dmr_seq ssbm-q22_early ssbm-q22_late ssbm-q22_continuous ssbm-q22_continuous_reenc \
 ssbm-q23_normal ssbm-q23_dmr_seq ssbm-q23_early ssbm-q23_late ssbm-q23_continuous ssbm-q23_continuous_reenc \
-ssbm-q31_normal ssbm-q31_dmr_seq \
-ssbm-q32_normal ssbm-q32_dmr_seq \
-ssbm-q33_normal ssbm-q33_dmr_seq \
-ssbm-q34_normal ssbm-q34_dmr_seq \
-ssbm-q41_normal ssbm-q41_dmr_seq \
-ssbm-q42_normal ssbm-q42_dmr_seq \
-ssbm-q43_normal ssbm-q43_dmr_seq")
+ssbm-q31_normal ssbm-q31_dmr_seq ssbm-q31_early ssbm-q31_late \
+ssbm-q32_normal ssbm-q32_dmr_seq ssbm-q32_early ssbm-q32_late \
+ssbm-q33_normal ssbm-q33_dmr_seq ssbm-q33_early ssbm-q33_late \
+ssbm-q34_normal ssbm-q34_dmr_seq ssbm-q34_early ssbm-q34_late \
+ssbm-q41_normal ssbm-q41_dmr_seq ssbm-q41_early ssbm-q41_late \
+ssbm-q42_normal ssbm-q42_dmr_seq ssbm-q42_early ssbm-q42_late \
+ssbm-q43_normal ssbm-q43_dmr_seq ssbm-q43_early ssbm-q43_late")
 
 ##############
 ### OPENMP ###
