--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -125,7 +125,7 @@ ssbm-q21_normal ssbm-q21_dmr_seq ssbm-q21_early ssbm-q21_late ssbm-q21_continuou
 ssbm-q22_normal ssbm-q22_dmr_seq ssbm-q22_early ssbm-q22_late ssbm-q22_continuous ssbm-q22_continuous_reenc \
 ssbm-q23_normal ssbm-q23_dmr_seq ssbm-q23_early ssbm-q23_late ssbm-q23_continuous ssbm-q23_continuous_reenc \
 ssbm-q31_normal ssbm-q31_dmr_seq ssbm-q31_early ssbm-q31_late ssbm-q31_continuous ssbm-q31_continuous_reenc \
-ssbm-q32_normal ssbm-q32_dmr_seq ssbm-q32_early ssbm-q32_late \
+ssbm-q32_normal ssbm-q32_dmr_seq ssbm-q32_early ssbm-q32_late ssbm-q32_continuous ssbm-q32_continuous_reenc \
 ssbm-q33_normal ssbm-q33_dmr_seq ssbm-q33_early ssbm-q33_late \
 ssbm-q34_normal ssbm-q34_dmr_seq ssbm-q34_early ssbm-q34_late \
 ssbm-q41_normal ssbm-q41_dmr_seq ssbm-q41_early ssbm-q41_late \
@@ -137,8 +137,8 @@ ssbm-q13_normal ssbm-q13_dmr_seq ssbm-q13_early ssbm-q13_late ssbm-q13_continuou
 ssbm-q21_normal ssbm-q21_dmr_seq ssbm-q21_early ssbm-q21_late ssbm-q21_continuous ssbm-q21_continuous_reenc \
 ssbm-q22_normal ssbm-q22_dmr_seq ssbm-q22_early ssbm-q22_late ssbm-q22_continuous ssbm-q22_continuous_reenc \
 ssbm-q23_normal ssbm-q23_dmr_seq ssbm-q23_early ssbm-q23_late ssbm-q23_continuous ssbm-q23_continuous_reenc \
-ssbm-q31_normal ssbm-q31_dmr_seq ssbm-q31_early ssbm-q31_late \
-ssbm-q32_normal ssbm-q32_dmr_seq ssbm-q32_early ssbm-q32_late \
+ssbm-q31_normal ssbm-q31_dmr_seq ssbm-q31_early ssbm-q31_late ssbm-q31_continuous ssbm-q31_continuous_reenc \
+ssbm-q32_normal ssbm-q32_dmr_seq ssbm-q32_early ssbm-q32_late ssbm-q32_continuous ssbm-q32_continuous_reenc \
 ssbm-q33_normal ssbm-q33_dmr_seq ssbm-q33_early ssbm-q33_late \
 ssbm-q34_normal ssbm-q34_dmr_seq ssbm-q34_early ssbm-q34_late \
 ssbm-q41_normal ssbm-q41_dmr_seq ssbm-q41_early ssbm-q41_late \
