libAHEAD / selectAN   * generate all binary AN-encoded selection operators (instead of only the "between" variant) for all encoded types   * use "(void) param" for unused parameters (instead of "__attribute__((unused))") due to stupid formatting of eclipse SSB   * add query 3.3 varaint continuous   * other queries: tiny changes like comments

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -126,7 +126,7 @@ ssbm-q22_normal ssbm-q22_dmr_seq ssbm-q22_early ssbm-q22_late ssbm-q22_continuou
 ssbm-q23_normal ssbm-q23_dmr_seq ssbm-q23_early ssbm-q23_late ssbm-q23_continuous ssbm-q23_continuous_reenc \
 ssbm-q31_normal ssbm-q31_dmr_seq ssbm-q31_early ssbm-q31_late ssbm-q31_continuous ssbm-q31_continuous_reenc \
 ssbm-q32_normal ssbm-q32_dmr_seq ssbm-q32_early ssbm-q32_late ssbm-q32_continuous ssbm-q32_continuous_reenc \
-ssbm-q33_normal ssbm-q33_dmr_seq ssbm-q33_early ssbm-q33_late \
+ssbm-q33_normal ssbm-q33_dmr_seq ssbm-q33_early ssbm-q33_late ssbm-q33_continuous \
 ssbm-q34_normal ssbm-q34_dmr_seq ssbm-q34_early ssbm-q34_late \
 ssbm-q41_normal ssbm-q41_dmr_seq ssbm-q41_early ssbm-q41_late \
 ssbm-q42_normal ssbm-q42_dmr_seq ssbm-q42_early ssbm-q42_late \
@@ -139,7 +139,7 @@ ssbm-q22_normal ssbm-q22_dmr_seq ssbm-q22_early ssbm-q22_late ssbm-q22_continuou
 ssbm-q23_normal ssbm-q23_dmr_seq ssbm-q23_early ssbm-q23_late ssbm-q23_continuous ssbm-q23_continuous_reenc \
 ssbm-q31_normal ssbm-q31_dmr_seq ssbm-q31_early ssbm-q31_late ssbm-q31_continuous ssbm-q31_continuous_reenc \
 ssbm-q32_normal ssbm-q32_dmr_seq ssbm-q32_early ssbm-q32_late ssbm-q32_continuous ssbm-q32_continuous_reenc \
-ssbm-q33_normal ssbm-q33_dmr_seq ssbm-q33_early ssbm-q33_late \
+ssbm-q33_normal ssbm-q33_dmr_seq ssbm-q33_early ssbm-q33_late ssbm-q33_continuous \
 ssbm-q34_normal ssbm-q34_dmr_seq ssbm-q34_early ssbm-q34_late \
 ssbm-q41_normal ssbm-q41_dmr_seq ssbm-q41_early ssbm-q41_late \
 ssbm-q42_normal ssbm-q42_dmr_seq ssbm-q42_early ssbm-q42_late \
